Adjust styles to prevent layout shift

--- a/components/calculationInput/common/FilterChips.module.scss
+++ b/components/calculationInput/common/FilterChips.module.scss
@@ -5,14 +5,12 @@
     flex-flow: row wrap;
     align-content: center;
     margin-bottom: 1rem;
-    & > .chip {
-        margin-inline-end: 0.2rem;
-        margin-bottom: 0.5rem;
-    }
+    row-gap: 0.5rem;
+    column-gap: 0.2rem;
 }
 
 .divider {
-    margin-inline: 0.3rem 0.5rem;
+    margin-inline: 0.3rem;
     height: 1lh;
     border-left: lightgray 1px solid;
 }
@@ -20,5 +18,3 @@
 .divider:last-child {
     display: none;
 }
-
-
